# bcurl

./: .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  README.md  benchmark-extended.ps1  benchmark-parallel.ps1  benchmark.ps1
docs/: BEATING_CURL.md  OPTIMIZATION_STRATEGIES.md  PERFORMANCE_ANALYSIS.md
src/: lib.rs  main.rs
tests/: integration_tests.rs
