[package]
name = "bcurl"
version = "0.2.0"
edition = "2021"
description = "A blazingly fast, minimal curl alternative in Rust - smaller than curl itself"
license = "MIT"
keywords = ["http", "curl", "cli", "client", "fast"]
categories = ["command-line-utilities", "web-programming::http-client"]

[[bin]]
name = "bcurl"
path = "src/main.rs"

[lib]
name = "bcurl"
path = "src/lib.rs"

[dependencies]
# ureq is MUCH smaller than reqwest - no async runtime, minimal deps
# Use native-tls on Windows for smaller binary (uses SChannel)
ureq = { version = "2.12", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
thiserror = "2.0"

[dev-dependencies]
mockito = "1.6"
tempfile = "3.15"

[profile.release]
lto = "fat"          # Maximum Link-Time Optimization
codegen-units = 1    # Single codegen unit for maximum optimization
panic = "abort"      # No unwinding - smaller binary and faster
strip = true         # Strip symbols from binary
opt-level = "z"      # Optimize for size (also fast due to better cache usage)

[profile.release-speed]
inherits = "release"
opt-level = 3        # Maximum speed optimization
